[package]
name = "undaunted"
version = "0.1.0"
authors = ["Tony Dwire <tony@undauntedonline.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
env_logger = "0.8.2"
chrono = "0.4.19"
serde = { version = "1.0.123", features = ["derive"] }
rmp = "0.8.9"
rmp-serde = "0.15.3"
serde_json = "1.0.59"
bevy = "0.4"
